// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ShowContent /> should match snapshot 1`] = `
"<_default>
  <div className=\\"title\\" title=\\"Star Wars: The Rise of Skywalker Skywalker\\">
    Star Wars: The Rise of Skywalker Skywalk...
  </div>
  <p className=\\"description\\">
    The surviving Resistance faces the First Order once again as the journey of Rey, Finn and Poe Dameron continues. With the power an...
  </p>
  <p className=\\"date\\">
    Air Date: 
    2019-12-18
  </p>
</_default>"
`;

exports[`<ShowContent /> should match snapshot displaySinglePage = true 1`] = `
"<_default>
  <div className=\\"title\\" title=\\"Star Wars: The Rise of Skywalker Skywalker\\">
    Star Wars: The Rise of Skywalker Skywalker
  </div>
  <p className=\\"description descriptionOverview customScroll\\">
    The surviving Resistance faces the First Order once again as the journey of Rey, Finn and Poe Dameron continues. With the power and knowledge of generations behind them, the final battle begins.
  </p>
  <p className=\\"date\\">
    Air Date: 
    2019-12-18
  </p>
</_default>"
`;

exports[`<ShowContent /> should match snapshot mediaTyoe = movie 1`] = `
"<_default>
  <div className=\\"title\\" title=\\"Star Wars: The Rise of Skywalker Skywalker\\">
    Star Wars: The Rise of Skywalker Skywalk...
  </div>
  <p className=\\"description\\">
    The surviving Resistance faces the First Order once again as the journey of Rey, Finn and Poe Dameron continues. With the power an...
  </p>
  <p className=\\"date\\">
    Released Date: 
    2019-12-18
  </p>
</_default>"
`;
